force-app/main/default/objects/Root_Cause__c/Root_Cause__c.object-meta.xml
<CustomObject>
    <label>Root Cause</label>
    <nameField>
        <label>Root Cause Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Root Causes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>