force-app/main/default/objects/Root_Cause__c/fields/Incident__c.field-meta.xml
<CustomField>
    <fullName>Incident__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Incident</label>
    <referenceTo>Incident__c</referenceTo>
    <relationshipLabel>Root Causes</relationshipLabel>
    <relationshipName>Root_Causes</relationshipName>
    <type>Lookup</type>
</CustomField>