force-app/main/default/objects/Root_Cause__c/fields/Level_2__c.field-meta.xml
<CustomField>
    <fullName>Level_2__c</fullName>
    <label>Level 2</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Level_1__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deliberate Failure</fullName>
            </value>
            <value>
                <fullName>Lack of due Diligence</fullName>
            </value>
            <value>
                <fullName>Training/Competence</fullName>
            </value>
            <value>
                <fullName>Insufficient team resourcing</fullName>
            </value>
            <value>
                <fullName>SLA</fullName>
            </value>
            <value>
                <fullName>Inaccurate MI</fullName>
            </value>
            <value>
                <fullName>Control Failure</fullName>
            </value>
            <value>
                <fullName>Policy did not fit for purpose</fullName>
            </value>
            <value>
                <fullName>System Failure</fullName>
            </value>
            <value>
                <fullName>System Technology Failure</fullName>
            </value>
            <value>
                <fullName>Lack of System</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
            <value>
                <fullName>Supplier Failure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>