force-app/main/default/objects/Root_Cause__c/fields/Primary_Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Primary_Root_Cause__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Root Cause?</label>
    <type>Checkbox</type>
</CustomField>